--- a/speed/package.json
+++ b/speed/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser": "~7.2.2",
     "@angular/platform-browser-dynamic": "~7.2.2",
     "@angular/router": "~7.2.2",
+    "@ngrx/store": "^7.3.0",
+    "@ngrx/store-devtools": "^7.3.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -32,9 +34,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.3",
+    "@angular-devkit/schematics": "^7.3.4",
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
+    "@ngrx/schematics": "^7.3.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
