--- a/speed/src/tsconfig.app.json
+++ b/speed/src/tsconfig.app.json
@@ -7,5 +7,9 @@
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  "resolveJsonModule": true,
+  "esModuleInterop": true,
+  "allowSyntheticDefaultImports": true
+
 }
