--- a/speed/package.json
+++ b/speed/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~7.2.2",
     "@angular/platform-browser-dynamic": "~7.2.2",
     "@angular/router": "~7.2.2",
+    "@ngrx/effects": "^7.3.0",
     "@ngrx/store": "^7.3.0",
     "@ngrx/store-devtools": "^7.3.0",
     "core-js": "^2.5.4",
